add ulya and wustha list

--- a/admin/index.html
+++ b/admin/index.html
@@ -73,7 +73,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
              
             </li>
             <li class="nav-item">
-              <a href="users.html class="nav-link">
+              <a href="users.html" class="nav-link">
                 <!-- <i class="nav-icon fas fa-th"></i> -->
                 <i class=" nav-icon fas fa-user"></i>
                 <p>
@@ -82,7 +82,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </a>
             </li>
             <li class="nav-item menu-open">
-              <a href="pages/widgets.html" class="nav-link">
+              <a href="peserta.html" class="nav-link">
                 <!-- <i class="nav-icon fas fa-th"></i> -->
                 <i class=" nav-icon  fas fa-users"></i>
                 <p>
