--- a/admin/peserta.html
+++ b/admin/peserta.html
@@ -78,7 +78,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a href="users.html class=" nav-link">
+                            <a href="users.html" class=" nav-link">
                                 <!-- <i class="nav-icon fas fa-th"></i> -->
                                 <i class=" nav-icon fas fa-user"></i>
                                 <p>
@@ -125,11 +125,12 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">Daftar User</h1>
+                            <h1 class="m-0">Daftar Semua Peserta</h1>
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item"><a href="#">dashboard</a></li>
+                                <li class="breadcrumb-item  active"><a href="">Daftar Semua peserta</a></li>
                             </ol>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
@@ -143,7 +144,7 @@
                     <!-- TABLE -->
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">DataTable with default features</h3>
+                            <h3 class="card-title">Daftar Semua Peserta</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
