--- a/admin/index.html
+++ b/admin/index.html
@@ -91,7 +91,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
               </a>
               <ul class="nav nav-treeview">
-                
+               <li class="nav-item">
+                  <a href="daftar_pendaftar.html">Daftar Pendaftar</a>
+               </li> 
                 <li class="nav-item">
                   <a href="#" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
