add syarata pendaftaran

--- a/user/persyaratan.html
+++ b/user/persyaratan.html
@@ -126,98 +126,19 @@
 
                 <div class="p-5 ">
 
-                    <h1 class="text-primary">Pendaftaran Santri</h1>
+                    <h1 class="text-primary">Persyaratan</h1>
 
                     <hr class="text-primary ">
 
-                    <form action="" class="container-md">
-                        <div class=" row">
-                            <div class="mb-3 col-md-6">
-                                <label for="" class="form-label text-primary fs-5">Name</label>
-                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
-                                    placeholder="" />
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="" class="form-label text-primary fs-5">Email</label>
-                                <input type="email" class="form-control" name="email" id="" aria-describedby="helpId"
-                                    placeholder="" />
-                            </div>
-
-                            <div class="my-2 ">
-                                <p class="text-primary fs-5">Daftar Sebagai </p>
-                                <select class="form-select" aria-label="Default select example">
-                                    <option value="wustha" selected>Wustha / Setara SMP</option>
-                                    <option  value="ulya">Ulya / Setara SMA</option>
-                                </select>
-                            </div>
-
-                            <div class="mb-3 col-md-6">
-                                <label for="" class="form-label text-primary fs-5">No.HP</label>
-                                <input type="text" class="form-control" name="phone_number" id=""
-                                    aria-describedby="helpId" placeholder="No.Hp " />
-                            </div>
-
-                             <div class="col-md-6">
-                                <p class="text-primary fs-5  ">Jenis Kelamin</p>
-                                <div class="d-flex gap-5  ">
-                                    <div class="form-check">
-                                        <input class="form-check-input bg-dark" type="radio" name="exampleRadios"
-                                            id="exampleRadios0" value="laki-laki" checked>
-                                        <label class="form-check-label" for="exampleRadios0">Laki-laki</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="exampleRadios"
-                                            id="exampleRadios1" value="perempuan">
-                                        <label class="form-check-label" for="exampleRadios1">Perempuan</label>
-                                    </div>
-                                </div>
-                            </div>
-                           
-                            <div class="mb-3">
-                                <label for="" class="form-label fs-5 text-primary">Alamat</label>
-                                <textarea class="form-control" name="" id="" rows="3"></textarea>
-                            </div>
-
-                           
-
-                            <div class="mb-3 col-md-6">
-                                <label for="" class="form-label text-primary fs-5">Tempat Lahir</label>
-                                <input type="text" class="form-control" name="tempat_lahir" id=""
-                                    aria-describedby="helpId" placeholder="" />
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="" class="form-label text-primary fs-5">Tanggal Lahir</label>
-                                <input type="date" class="form-control" name="tanggal_lahir" id=""
-                                    aria-describedby="helpId" placeholder="" />
-                            </div>
-                            <div class="mb-3 col-md-12">
-                                <label for="" class="form-label text-primary fs-5">Sekolah Sebelumnya </label>
-                                <input type="text" class="form-control" name="tempat_lahir" id=""
-                                    aria-describedby="helpId" placeholder="" />
-                            </div>
-                            <div>
-
-                                <span class="text-bold my-2 d-block text-primary fs-5 ">Upload Scan File</span>
-                                <div class="input-group mb-3">
-                                    <label class="input-group-text" for="inputGroupFile01">Upload</label>
-                                    <input type="file" class="form-control" id="inputGroupFile01">
-                                </div>
-
-                                <ul>
-                                    <li>Scan Akta Kelahiran dan KK, hasil cek kesehatan , pas foto 3x4, dan fotokopi
-                                        Raport 5 Semester Terakhir <span class="text-bold">Gabung jadi Satu</span></li>
-                                    <li>Format File Berupa PDF</li>
-                                    <li>Ukuran Maximal 2mb</li>
-                                </ul>
-
-                            </div>
-                            <input name="" id="" class="btn btn-primary fs-5  " type="button" value="Kirim" />
-
-                        </div>
-                    </form>
-
-
+                    <h3>Syarat Pendaftaran</h3>
+                    <ul>
+                        <li>Scan Akta Kelahiran & KK</li>
+                        <li>Scan Hasil cek kesehatan dati Rumah Sakit Setempat</li>
+                        <li>Pas Foto 3x4</li>
+                        <li>scan Raport 5 semester terakhir</li>
+                    </ul>
                 </div>
+
 
 
             </div>
